--- a/app/studentServer/dorm/index.html
+++ b/app/studentServer/dorm/index.html
@@ -11,6 +11,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
 
+    <link rel="stylesheet" href="../../source/css/post.css">
+
     <script src="appDorm.js"></script>
     <title>Dorm Management</title>
 </head>
