--- a/app/commentServer/comment/index.html
+++ b/app/commentServer/comment/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html lang="en" ng-app="myAppCity">
+<html lang="en" ng-app="myAppComment">
 
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8">
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular-route.js"></script>
@@ -12,9 +13,10 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
 
     <link rel="stylesheet" href="../../source/css/post.css">
+<!--    <link rel="stylesheet" href="../../source/css/main-page.css">-->
 
-    <script src="appCity.js"></script>
-    <title>City Management</title>
+    <script src="appComment.js"></script>
+    <title>Comment Management</title>
 </head>
 
 <body>
