--- a/app/source/html/header.html
+++ b/app/source/html/header.html
@@ -11,6 +11,9 @@
             <li class="nav-item">
                 <a class="nav-link" href="../../postServer/post/index.html">Post</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" href="../../commentServer/comment/index.html">Comment</a>
+            </li>
             <!-- Dropdown -->
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
