--- a/app/studentServer/student/index.html
+++ b/app/studentServer/student/index.html
@@ -21,6 +21,8 @@
     <ng-include src="'../../source/html/header.html'"></ng-include>
 
     <div ng-view></div>
+
+    <ng-include src="'../../source/html/footer.html'"></ng-include>
 </body>
 
 </html>
