--- a/app/source/html/header.html
+++ b/app/source/html/header.html
@@ -27,20 +27,15 @@
                     <a class="dropdown-item" href="../../studentServer/dorm/index.html">Dormitory</a>
                 </div>
             </li>
-
-            <li class="nav-item">
-                <a class="nav-link" href="../../userServer/user/index.html">User</a>
-            </li>
         </ul>
-
-
+        
         <ul class="navbar-nav">
             <li class="nav-item">
-                <a class="nav-link" href="../../userServer/signup/index.html">Sign up</a>
+                <a class="nav-link" href="../../studentServer/signup/index.html">Sign up</a>
             </li>
 
             <li class="nav-item">
-                <a class="nav-link" href="../../userServer/login/index.html">Login</a>
+                <a class="nav-link" href="../../studentServer/login/index.html">Login</a>
             </li>
         </ul>
 
